react and redux

--- a/20170613/learngulp/src/index.html
+++ b/20170613/learngulp/src/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>学习gulp</title>
     <!-- inject:css -->
-    <link rel="stylesheet" href="css/all.min.css">
     <!-- endinject -->
 </head>
 <body>
-22222
+<img src="imgs/logo.png" alt="">
+111
+<div id="app">
+
+</div>
 <!-- inject:js -->
-<script src="js/all.min.js"></script>
 <!-- endinject -->
 </body>
 </html>
