--- a/20170613/gulp/src/index.html
+++ b/20170613/gulp/src/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="js/all.js"></script>
+    <!-- inject:css -->
+    <!-- endinject -->
 </head>
-000
+<body>
+22222
+<!-- inject:js -->
+<!-- endinject -->
 </body>
 </html>
